--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguise_option_parameters.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguise_option_parameters.yml
@@ -2386,3 +2386,6 @@
 
 # Used for the disguise option SoundGroup
 "ZOMBIFIED_PIGLIN": "ZOMBIFIED_PIGLIN"
+
+# Used for the disguise option SoundGroup
+"CAMEL": "CAMEL"
