--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguise_options.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguise_options.yml
@@ -439,3 +439,6 @@
 
 # Used as a shortcut for setBaby(false) when disguising an entity
 "adult": "adult"
+
+# Found in the disguise options for Slime and uses a int
+"setUnsafeSize": "setUnsafeSize"
