--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguises.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/LibsDisguises/Translations/disguises.yml
@@ -511,3 +511,6 @@
 
 # Used for the disgiuse modify radius command to list all disguisetypes
 "DisgiseType": "DisgiseType"
+
+# Name for the CAMEL disguise
+"Camel": "Camel"
